--- a/lc.cabal
+++ b/lc.cabal
@@ -36,4 +36,5 @@ executable lc
   build-depends:
       base >=4.7 && <5
     , containers >= 0.6 && < 0.7
+    , transformers
   default-language: Haskell2010
