--- a/lc.cabal
+++ b/lc.cabal
@@ -37,4 +37,5 @@ executable lc
       base >=4.7 && <5
     , containers >= 0.6 && < 0.7
     , transformers
+    , ansi-terminal >= 0.10 && < 0.11
   default-language: Haskell2010
